# SandboxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Monkey.fbx  README.md  imgui.ini
SandboxEngine/: CMakeLists.txt
SandboxEngine/Release/: SandboxEngine.lib
SandboxEngine/include/: SandboxEngine.h
SandboxEngine/include/SandboxEngine/: Application.cpp  Application.h  Camera.h  Events.h  Graphics.h  Input.h  Log.h  Maths.h  Rendering.h  Types.h  Voxels.h  Window.h
SandboxEngine/include/SandboxEngine/Graphics/: Buffers.h  IndexBuffer.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Types.h  VertexBuffer.h
SandboxEngine/include/SandboxEngine/Graphics/Primitives/: BoundingBox.h  Cube.h  Plane.h
SandboxEngine/include/SandboxEngine/Rendering/: Camera.h  IndexBuffer.h  Object.h  Renderer.h  VertexArray.h  VertexBuffer.h
SandboxEngine/include/SandboxEngine/Window/: Events.h  Input.h  Window.h
SandboxEngine/src/: Application.cpp
SandboxEngine/src/Graphics/OpenGL/: Buffers.cpp  OpenGLContext.cpp  OpenGLContext.h  Renderer.cpp  Shader.cpp  Texture.cpp  Types.cpp
SandboxEngine/src/Graphics/shaders/: primitive.frag  primitive.vert
SandboxEngine/src/Platform/GLFW/: Events.cpp  GLFWContext.cpp  GLFWContext.h  Input.cpp  Window.cpp
SandboxEngine/src/Platform/OpenGL/: IndexBuffer.cpp  OpenGLContext.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Types.cpp  VertexArray.cpp  VertexBuffer.cpp
SandboxEngine/src/Window/GLFW/: Events.cpp  GLFWContext.h  Window.cpp
TestProject/: CMakeLists.txt  imgui.ini
TestProject/src/: Minecraft.h  Octree.h  OctreeApp.h  Quadtree.h  Template.h  Voxels.h  main.cpp
TestProject/src/shaders/: basic.frag  basic.vert
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
